--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -3,7 +3,7 @@
     {% comment %}
       Main navigation
     {% endcomment %}
-    <div class="header-nav">
+    <div class="header-nav coloured">
       {% for link in linklists['main-menu'].links -%}
         <div class="header-nav__item">
           <a
