--- a/source/sections/contact.scss
+++ b/source/sections/contact.scss
@@ -6,54 +6,47 @@ Image and text blocka
   position: relative;
   width: 100%;
   overflow: hidden;
-  padding: 8rem 2rem;
   background: var(--off-white);
+  margin-top: 7.45rem;
 
   &__wrap {
     width: 100%;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    align-items: flex-start;
-    align-content: flex-start;
-    max-width: var(--content-width);
+    align-items: flex-center;
+    align-content: flex-center;
     margin: 0 auto;
 
     &__form {
-      width: 50%;
+      width: 100%;
       position: relative;
       display: flex;
       flex-wrap: wrap;
 
-      @include media($md, max) {
-        width: 100%;
-        transform: none !important;
-        order: 2 !important;
-      }
-
-      [class^='WidgetBackground__Container'] {
+      [class^="WidgetBackground__Container"] {
         padding: 0 !important;
       }
 
-      [class^='ButtonBase__ButtonContainer'] {
+      [class^="ButtonBase__ButtonContainer"] {
         border-radius: 10000rem !important;
         background: var(--green) !important;
         padding: 0.5rem 3rem !important;
       }
 
-      [class^='SubmitMessage__Text'] {
+      [class^="SubmitMessage__Text"] {
         color: var(--green) !important;
       }
 
-      [class^='ButtonBase__Overlay'] {
+      [class^="ButtonBase__Overlay"] {
         background: transparent !important;
       }
 
-      [class^='WidgetTitle__'] {
+      [class^="WidgetTitle__"] {
         display: none;
       }
 
-      [class^='Loader__Spinner'] {
+      [class^="Loader__Spinner"] {
         border-color: transparent var(--green) var(--green) !important;
       }
 
@@ -62,13 +55,19 @@ Image and text blocka
         text-decoration: none !important;
       }
 
-      [class^='TextControlBase__TextControlBaseContainer'] {
+      input[type="text"],
+      input[type="email"],
+      textarea,
+      [class^="TextControlBase__TextControlBaseContainer"] {
         border: 2px solid var(--green) !important;
-        border-radius: 10000rem !important;
+        border-radius: 3rem !important;
         background: transparent !important;
         color: var(--green) !important;
-
+        font-size: 1.6rem;
         padding: 1.5rem 2rem !important;
+        font-family: "sofia-pro", sans-serif !important;
+        width: 100% !important;
+        resize: none;
 
         label {
           color: var(--green) !important;
@@ -79,8 +78,31 @@ Image and text blocka
         }
       }
 
-      input:checked ~ [class^='ChoiceOption__Container'] [class^='ChoiceOption__Item'] {
+      textarea {
+        min-height: 14rem;
+      }
+
+      input:checked ~ [class^="ChoiceOption__Container"] [class^="ChoiceOption__Item"] {
         background: var(--green) !important;
+      }
+    }
+
+    .contact-form {
+      width: 100% !important;
+
+      label {
+        display: none;
+      }
+
+      .field {
+        width: 100%;
+        margin-bottom: 2rem;
+      }
+
+      [type="submit"] {
+        color: white !important;
+        font-size: 1.6rem;
+        font-family: "sofia-pro", sans-serif !important;
       }
     }
 
@@ -92,6 +114,20 @@ Image and text blocka
       flex-wrap: wrap;
       align-content: center;
 
+      @include media($lg, max) {
+        width: 100%;
+        transform: none !important;
+        order: 2 !important;
+      }
+
+      .contact-element__wrap__text__constraint {
+        max-width: 50rem;
+
+        @include media($lg, max) {
+          max-width: 100%;
+        }
+      }
+
       * {
         color: var(--green);
       }
@@ -99,8 +135,58 @@ Image and text blocka
       @include media($md, max) {
         width: 100%;
         order: 1;
-        padding:  0 0 3rem;
+        padding: 0 0 3rem;
       }
     }
+
+    &__image {
+      width: 50%;
+      position: relative;
+      display: flex;
+      flex-wrap: wrap;
+      align-content: center;
+
+      @include media($lg, max) {
+        width: 100%;
+        aspect-ratio: 2/1;
+        img {
+          object-position: center;
+        }
+      }
+
+      img {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+      }
+    }
+  }
+}
+
+[data-theme="postpartum"] {
+  .contact-element__wrap__text {
+    background: var(--purple-light) !important;
+  }
+
+  .contact-element__wrap * {
+    color: var(--orange) !important;
+  }
+
+  .contact-element__wrap__form input[type="text"],
+  .contact-element__wrap__form input[type="email"],
+  .contact-element__wrap__form textarea{
+    color: var(--orange) !important;
+    border-color: var(--orange) !important;
+
+    @include placeholder {
+      color: var(--orange ) !important;
+    }
+  }
+
+  [type="submit"]{
+    background: var(--orange) !important;
   }
 }
