--- a/sections/image-text-block.liquid
+++ b/sections/image-text-block.liquid
@@ -1,8 +1,7 @@
-<div class="element image-element {% if block.settings.reverse_layout %}image-element--reversed{%- endif -%}">
+<div class="element image-element {% if block.settings.reverse_layout %}image-element--reversed{%- endif -%} {% if block.settings.smaller_image %}image-element--smaller-image{%- endif -%}">
   <div class="image-element__wrap image-element__wrap--{$Width}">
     <div class="image-element__wrap__image">
       {{ section.settings.image | image_url: width: 1200 | image_url: height: 800 | image_tag }}
-
     </div>
 
     <div class="image-element__wrap__text">
@@ -35,6 +34,12 @@
       "type": "checkbox",
       "id": "reverse_layout",
       "label": "Reverse layout",
+      "default": false
+    },
+    {
+      "type": "checkbox",
+      "id": "smaller_image",
+      "label": "Smaller image",
       "default": false
     }
   ],
