--- a/source/sections/product.scss
+++ b/source/sections/product.scss
@@ -245,6 +245,25 @@
     .dot {
         background: var(--green);
     }
+    background: var(--blue-light);
+}
+
+html body .mega .mega__wrap__column__sublink {
+    [data-isolated-theme="pregnancy"] {
+        color: var(--green) !important;
+        &.link:not(.static),
+        &:not([class]) {
+            box-shadow:
+                inset 0 -1px 0 var(--green),
+                0 1px 0 var(--green) !important;
+            &:hover {
+                box-shadow:
+                    inset 0 -30px 0 var(--green),
+                    0 1px 0 var(--green) !important;
+                color: white !important;
+            }
+        }
+    }
 }
 
 html {
