--- a/source/sections/product.scss
+++ b/source/sections/product.scss
@@ -248,24 +248,6 @@
     background: var(--blue-light);
 }
 
-html body .mega .mega__wrap__column__sublink {
-    [data-isolated-theme="pregnancy"] {
-        color: var(--green) !important;
-        &.link:not(.static),
-        &:not([class]) {
-            box-shadow:
-                inset 0 -1px 0 var(--green),
-                0 1px 0 var(--green) !important;
-            &:hover {
-                box-shadow:
-                    inset 0 -30px 0 var(--green),
-                    0 1px 0 var(--green) !important;
-                color: white !important;
-            }
-        }
-    }
-}
-
 html {
     [data-theme="postpartum"],
     [data-theme="postpartum"],
@@ -300,11 +282,13 @@ html {
             background: var(--orange) !important;
         }
 
+        .header.mega-visible,
         .header.nav-up,
         .header.nav-down {
             border-bottom: 1px solid var(--orange);
         }
 
+        .header.mega-visible,
         .header.nav-down,
         .header.nav-up,
         .mega {
@@ -312,6 +296,7 @@ html {
         }
 
         .tooltip,
+        .mega__wrap__column__link b,
         .mega__wrap__column__sublink a {
             color: var(--orange) !important;
         }
@@ -462,6 +447,7 @@ html {
             }
         }
 
+        .header.mega-visible,
         .header.nav-up,
         .header.nav-down {
             border-bottom: 1px solid var(--pink);
@@ -472,6 +458,7 @@ html {
             background: var(--pink) !important;
         }
 
+        .header.mega-visible,
         .header.nav-down,
         .header.nav-up,
         .mega {
@@ -479,6 +466,7 @@ html {
         }
 
         .tooltip,
+        .mega__wrap__column__link b,
         .mega__wrap__column__sublink a {
             color: var(--pink) !important;
         }
