More updates to the footer section

--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -93,17 +93,6 @@
       </p>
     </div>
 
-        {% comment %}
-      Column
-    {% endcomment %}
-    <div class="footer-column footer-column--2.5">
-      <h6 class="white">Partnerships</h6>
-      <p>
-        {% for link in linklists['footer-middle-left'].links -%}
-          <a href="{{ link.url }}" class="animate-white-to-transparent-white white">{{ link.title }}</a><br>
-        {%- endfor %}
-      </p>
-    </div>
 
     {% comment %}
       Column
@@ -112,6 +101,19 @@
       <h6 class="white">Important bits</h6>
       <p>
         {% for link in linklists['footer-middle'].links -%}
+          <a href="{{ link.url }}" class="animate-white-to-transparent-white white">{{ link.title }}</a><br>
+        {%- endfor %}
+      </p>
+    </div>
+
+
+    {% comment %}
+      Column
+    {% endcomment %}
+    <div class="footer-column footer-column--2-5">
+      <h6 class="white">Partnerships</h6>
+      <p>
+        {% for link in linklists['footer-middle-left'].links -%}
           <a href="{{ link.url }}" class="animate-white-to-transparent-white white">{{ link.title }}</a><br>
         {%- endfor %}
       </p>
