--- a/source/sections/footer.scss
+++ b/source/sections/footer.scss
@@ -41,7 +41,7 @@
         }
 
         &--1 {
-            width: 40%;
+            width: 34%;
             padding-right: 3rem;
 
             @include media($lg, max) {
@@ -49,71 +49,70 @@
                 width: 100%;
             }
 
-            @include media($md, max) {
+            @include media($lg, max) {
                 width: 50%;
                 margin-bottom: 4rem;
             }
 
-            @include media($sm, max) {
+            @include media($lg, max) {
                 width: 100%;
                 margin-bottom: 4rem;
             }
         }
-        
+
         &--2 {
-            width: 20%;
+            width: 16.5%;
 
             @include media($lg, max) {
                 width: 33.33333%;
             }
 
-            @include media($md, max) {
+            @include media($lg, max) {
                 width: 50%;
                 margin-bottom: 4rem;
             }
+        }
 
-            @include media($sm, max) {
-                // width: 100%;
-                // margin-bottom: 4rem;
+        &--2-5 {
+            width: 16.5%;
+
+            @include media($lg, max) {
+                width: 33.33333%;
+            }
+
+            @include media($lg, max) {
+                width: 50%;
+                margin-bottom: 4rem;
             }
         }
 
         &--3 {
-            width: 20%;
+            width: 16.5%;
 
             @include media($lg, max) {
                 width: 33.33333%;
             }
 
-            @include media($md, max) {
+            @include media($lg, max) {
                 width: 50%;
                 margin-bottom: 4rem;
             }
 
-            @include media($sm, max) {
-                order:6;
-                
-                // width: 100%;
-                // margin-bottom: 4rem;
+            @include media($lg, max) {
+                order: 6;
             }
         }
 
-
         &--4 {
-            width: 20%;
+            width: 16.5%;
 
             @include media($lg, max) {
                 width: 33.33333%;
             }
 
-            @include media($md, max) {
+            @include media($lg, max) {
                 width: 50%;
                 margin-bottom: 4rem;
-            }
-
-            @include media($sm, max) {
-                // width: 100%;
-                // margin-bottom: 4rem;
             }
         }
     }
