Updated package new blocks

--- a/sections/image-text-block.liquid
+++ b/sections/image-text-block.liquid
@@ -41,6 +41,12 @@
       "id": "smaller_image",
       "label": "Smaller image",
       "default": false
+    },
+    {
+      "type": "color",
+      "id": "background_color",
+      "label": "Background color",
+      "default": "#E1EDF9"
     }
   ],
   "presets": [
