--- a/sections/grid-block-with-text.liquid
+++ b/sections/grid-block-with-text.liquid
@@ -26,7 +26,7 @@
   <div class="grid-with-text__wrap">
     <div class="grid-with-text__copy">
       {{ section.settings.copy }}
-    </div> 
+    </div>
     <div class="grid-with-text__grid">
       {%- for block in section.blocks -%}
         {% assign count = count | plus: 1 %}
@@ -66,6 +66,18 @@
       "id": "copy",
       "default": "<p>Lorem ipsum dolor sit amet. Et fuga nemo eum temporibus sint At perspiciatis deserunt ab nulla quia id fugiat voluptatem ad suscipit numquam.</p>",
       "label": "Copy"
+    },
+    {
+      "type": "color",
+      "id": "background_color",
+      "label": "Background color",
+      "default": "#E1EDF9"
+    },
+    {
+      "type": "checkbox",
+      "id": "reverse_layout",
+      "label": "Reverse layout",
+      "default": false
     }
   ],
   "max_blocks": 3,
