--- a/sections/contact-block.liquid
+++ b/sections/contact-block.liquid
@@ -1,4 +1,4 @@
-<div class="element contact-element {% if block.settings.reverse_layout %}contact-element--reversed{%- endif -%}">
+<div class="element contact-element {% if section.settings.reverse_layout %}contact-element--reversed{%- endif -%}">
   <div class="contact-element__wrap contact-element__wrap--{$Width}">
     <div class="contact-element__wrap__text">
       <div class="contact-element__wrap__text__constraint">
