--- a/sections/grid-block-with-text.liquid
+++ b/sections/grid-block-with-text.liquid
@@ -1,28 +1,5 @@
-<div class="grid-with-text">
-  <div class="grid-with-text-wave1 [ js-wave ]">
-    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1366 768">
-      <path d="M0,32L48,74.7C96,117,192,203,288,245.3C384,288,480,288,576,266.7C672,245,768,203,864,176C960,149,1056,139,1152,149.3C1248,160,1344,192,1392,208L1440,224L1440,320" stroke-width="1" stroke="red" fill-opacity="0"/>
-    </svg>
-  </div>
-
-  <div class="grid-with-text-wave2 [ js-wave ]">
-    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1366 768">
-      <path d="M0,32L48,74.7C96,117,192,203,288,245.3C384,288,480,288,576,266.7C672,245,768,203,864,176C960,149,1056,139,1152,149.3C1248,160,1344,192,1392,208L1440,224L1440,320" stroke-width="3" stroke="red" fill-opacity="0"/>
-    </svg>
-  </div>
-
-  <div class="grid-with-text-wave3 [ js-wave ]">
-    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1366 768">
-      <path d="M0,32L48,74.7C96,117,192,203,288,245.3C384,288,480,288,576,266.7C672,245,768,203,864,176C960,149,1056,139,1152,149.3C1248,160,1344,192,1392,208L1440,224L1440,320" stroke-width="1" stroke="red" fill-opacity="0"/>
-    </svg>
-  </div>
-
-  <div class="grid-with-text-wave4 [ js-wave ]">
-    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1366 768">
-      <path d="M0,32L48,74.7C96,117,192,203,288,245.3C384,288,480,288,576,266.7C672,245,768,203,864,176C960,149,1056,139,1152,149.3C1248,160,1344,192,1392,208L1440,224L1440,320" stroke-width="3" stroke="red" fill-opacity="0"/>
-    </svg>
-  </div>
-
+<div class="grid-with-text {% if section.settings.reverse_layout %}image-element--reversed{%- endif -%}">
+  <div class="image-element__background" style="background-color: {{ section.settings.background_color }};"></div>
   <div class="grid-with-text__wrap">
     <div class="grid-with-text__copy">
       {{ section.settings.copy }}
@@ -55,6 +32,30 @@
       {%- endfor -%}
     </div>
   </div>
+</div>
+
+<div class="grid-with-text-wave1 [ js-wave ]">
+  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1366 768">
+    <path d="M0,32L48,74.7C96,117,192,203,288,245.3C384,288,480,288,576,266.7C672,245,768,203,864,176C960,149,1056,139,1152,149.3C1248,160,1344,192,1392,208L1440,224L1440,320" stroke-width="1" stroke="red" fill-opacity="0"/>
+  </svg>
+</div>
+
+<div class="grid-with-text-wave2 [ js-wave ]">
+  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1366 768">
+    <path d="M0,32L48,74.7C96,117,192,203,288,245.3C384,288,480,288,576,266.7C672,245,768,203,864,176C960,149,1056,139,1152,149.3C1248,160,1344,192,1392,208L1440,224L1440,320" stroke-width="3" stroke="red" fill-opacity="0"/>
+  </svg>
+</div>
+
+<div class="grid-with-text-wave3 [ js-wave ]">
+  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1366 768">
+    <path d="M0,32L48,74.7C96,117,192,203,288,245.3C384,288,480,288,576,266.7C672,245,768,203,864,176C960,149,1056,139,1152,149.3C1248,160,1344,192,1392,208L1440,224L1440,320" stroke-width="1" stroke="red" fill-opacity="0"/>
+  </svg>
+</div>
+
+<div class="grid-with-text-wave4 [ js-wave ]">
+  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1366 768">
+    <path d="M0,32L48,74.7C96,117,192,203,288,245.3C384,288,480,288,576,266.7C672,245,768,203,864,176C960,149,1056,139,1152,149.3C1248,160,1344,192,1392,208L1440,224L1440,320" stroke-width="3" stroke="red" fill-opacity="0"/>
+  </svg>
 </div>
 
 {% schema %}
