--- a/source/sections/image-text.scss
+++ b/source/sections/image-text.scss
@@ -7,7 +7,15 @@ Image and text blocka
   width: 100%;
   overflow: hidden;
   padding: 8rem 2rem;
-  background: var(--blue-light);
+
+  &__background {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+  }
 
   &__wrap {
     width: 100%;
@@ -17,6 +25,8 @@ Image and text blocka
     align-items: center;
     max-width: var(--content-width);
     margin: 0 auto;
+    position: relative;
+    z-index: 3;
 
     &__image {
       width: 50%;
