--- a/assets/style.css
+++ b/assets/style.css
@@ -3725,8 +3725,8 @@ html body #shopify-section-footer .footer-newsletter__field__button:before {
 .hero {
   z-index: 3;
   width: 100%;
-  padding-top: 6rem;
-  padding-bottom: 12rem;
+  padding-top: 12rem;
+  padding-bottom: 18rem;
   position: relative;
   overflow: hidden;
 }
@@ -6097,6 +6097,46 @@ img.error:after {
   }
 }
 
+.image-element-wave3, .image-element-wave4 {
+  pointer-events: none;
+  z-index: -1;
+  z-index: 1;
+  width: 100%;
+  position: absolute;
+  bottom: -50%;
+  left: 60%;
+  transform: translateY(0%)translateX(-10%)rotate(-60deg);
+}
+
+.image-element-wave3:after, .image-element-wave4:after {
+  content: "";
+  padding-bottom: 56.2225%;
+  display: block;
+  position: relative;
+}
+
+.image-element-wave3 svg, .image-element-wave4 svg {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+@media screen and (width <= 1280px) {
+  .image-element-wave3, .image-element-wave4 {
+    display: none;
+  }
+}
+
+.image-element-wave3 path, .image-element-wave4 path {
+  stroke: var(--pink);
+}
+
+.image-element-wave3 {
+  transform: translateY(-50%)translateX(-10%)rotate(-220deg);
+}
+
 .customCursor {
   pointer-events: none;
   z-index: 110001;
@@ -6867,7 +6907,7 @@ iframe.wait-autoplay {
 }
 
 .contact-element {
-  background: var(--off-white);
+  background: #fffcf8;
   width: 100%;
   margin-top: 7.45rem;
   position: relative;
@@ -6878,14 +6918,16 @@ iframe.wait-autoplay {
   justify-content: space-between;
   align-items: flex-center;
   align-content: flex-center;
-  flex-wrap: wrap;
   width: 100%;
+  max-width: var(--content-width);
+  flex-wrap: wrap;
   margin: 0 auto;
   display: flex;
 }
 
 .contact-element__wrap__form {
   flex-wrap: wrap;
+  order: 2;
   width: 100%;
   display: flex;
   position: relative;
@@ -6924,13 +6966,14 @@ iframe.wait-autoplay {
 
 .contact-element__wrap__form input[type="text"], .contact-element__wrap__form input[type="email"], .contact-element__wrap__form textarea, .contact-element__wrap__form [class^="TextControlBase__TextControlBaseContainer"] {
   resize: none;
+  border: 0;
   font-size: 1.6rem;
-  border: 2px solid var(--green) !important;
+  border-bottom: 2px solid var(--green) !important;
   color: var(--green) !important;
   background: none !important;
-  border-radius: 3rem !important;
+  border-radius: 0 !important;
   width: 100% !important;
-  padding: 1.5rem 2rem !important;
+  padding: 1.5rem 0 !important;
   font-family: sofia-pro, sans-serif !important;
 }
 
@@ -7031,6 +7074,7 @@ iframe.wait-autoplay {
 
 .contact-element__wrap__text {
   flex-wrap: wrap;
+  order: 1;
   align-content: center;
   width: 50%;
   padding: 4rem 8rem;
@@ -7089,76 +7133,76 @@ iframe.wait-autoplay {
 
 .contact-element__wrap__image img {
   object-fit: cover;
-  width: 100%;
-  height: 100%;
+  width: calc(100% - 8rem);
+  height: calc(100% - 8rem);
   position: absolute;
-  top: 0;
-  left: 0;
+  top: 4rem;
+  left: 4rem;
 }
 
-[data-theme="postpartum"] .contact-element__wrap__text {
-  background: var(--purple-light) !important;
+.contact-element .contact-element__wrap__text {
+  background: #fffcf8 !important;
 }
 
-[data-theme="postpartum"] .contact-element__wrap * {
-  color: var(--orange) !important;
+.contact-element .contact-element__wrap * {
+  color: var(--pink) !important;
 }
 
-[data-theme="postpartum"] .contact-element__wrap__form input[type="text"], [data-theme="postpartum"] .contact-element__wrap__form input[type="email"], [data-theme="postpartum"] .contact-element__wrap__form textarea {
-  color: var(--orange) !important;
-  border-color: var(--orange) !important;
+.contact-element .contact-element__wrap__form input[type="text"], .contact-element .contact-element__wrap__form input[type="email"], .contact-element .contact-element__wrap__form textarea {
+  color: var(--pink) !important;
+  border-color: var(--pink) !important;
 }
 
-[data-theme="postpartum"] .contact-element__wrap__form input[type="text"]::-webkit-input-placeholder {
-  color: var(--orange) !important;
+.contact-element .contact-element__wrap__form input[type="text"]::-webkit-input-placeholder {
+  color: var(--pink) !important;
 }
 
-[data-theme="postpartum"] .contact-element__wrap__form input[type="email"]::-webkit-input-placeholder {
-  color: var(--orange) !important;
+.contact-element .contact-element__wrap__form input[type="email"]::-webkit-input-placeholder {
+  color: var(--pink) !important;
 }
 
-[data-theme="postpartum"] .contact-element__wrap__form textarea::-webkit-input-placeholder {
-  color: var(--orange) !important;
+.contact-element .contact-element__wrap__form textarea::-webkit-input-placeholder {
+  color: var(--pink) !important;
 }
 
-[data-theme="postpartum"] .contact-element__wrap__form input[type="text"]:-moz-placeholder {
-  color: var(--orange) !important;
+.contact-element .contact-element__wrap__form input[type="text"]:-moz-placeholder {
+  color: var(--pink) !important;
 }
 
-[data-theme="postpartum"] .contact-element__wrap__form input[type="email"]:-moz-placeholder {
-  color: var(--orange) !important;
+.contact-element .contact-element__wrap__form input[type="email"]:-moz-placeholder {
+  color: var(--pink) !important;
 }
 
-[data-theme="postpartum"] .contact-element__wrap__form textarea:-moz-placeholder {
-  color: var(--orange) !important;
+.contact-element .contact-element__wrap__form textarea:-moz-placeholder {
+  color: var(--pink) !important;
 }
 
-[data-theme="postpartum"] .contact-element__wrap__form input[type="text"]::-moz-placeholder {
-  color: var(--orange) !important;
+.contact-element .contact-element__wrap__form input[type="text"]::-moz-placeholder {
+  color: var(--pink) !important;
 }
 
-[data-theme="postpartum"] .contact-element__wrap__form input[type="email"]::-moz-placeholder {
-  color: var(--orange) !important;
+.contact-element .contact-element__wrap__form input[type="email"]::-moz-placeholder {
+  color: var(--pink) !important;
 }
 
-[data-theme="postpartum"] .contact-element__wrap__form textarea::-moz-placeholder {
-  color: var(--orange) !important;
+.contact-element .contact-element__wrap__form textarea::-moz-placeholder {
+  color: var(--pink) !important;
 }
 
-[data-theme="postpartum"] .contact-element__wrap__form input[type="text"]:-ms-input-placeholder {
-  color: var(--orange) !important;
+.contact-element .contact-element__wrap__form input[type="text"]:-ms-input-placeholder {
+  color: var(--pink) !important;
 }
 
-[data-theme="postpartum"] .contact-element__wrap__form input[type="email"]:-ms-input-placeholder {
-  color: var(--orange) !important;
+.contact-element .contact-element__wrap__form input[type="email"]:-ms-input-placeholder {
+  color: var(--pink) !important;
 }
 
-[data-theme="postpartum"] .contact-element__wrap__form textarea:-ms-input-placeholder {
-  color: var(--orange) !important;
+.contact-element .contact-element__wrap__form textarea:-ms-input-placeholder {
+  color: var(--pink) !important;
 }
 
-[data-theme="postpartum"] [type="submit"] {
-  background: var(--orange) !important;
+.contact-element [type="submit"] {
+  background: var(--pink) !important;
 }
 
 .icon-element {
