--- a/source/sections/contact.scss
+++ b/source/sections/contact.scss
@@ -6,7 +6,7 @@ Image and text blocka
   position: relative;
   width: 100%;
   overflow: hidden;
-  background: var(--off-white);
+  background: #fffcf8;
   margin-top: 7.45rem;
 
   &__wrap {
@@ -17,12 +17,14 @@ Image and text blocka
     align-items: flex-center;
     align-content: flex-center;
     margin: 0 auto;
+    max-width: var(--content-width);
 
     &__form {
       width: 100%;
       position: relative;
       display: flex;
       flex-wrap: wrap;
+      order: 2;
 
       [class^="WidgetBackground__Container"] {
         padding: 0 !important;
@@ -59,12 +61,13 @@ Image and text blocka
       input[type="email"],
       textarea,
       [class^="TextControlBase__TextControlBaseContainer"] {
-        border: 2px solid var(--green) !important;
-        border-radius: 3rem !important;
+        border: 0;
+        border-bottom: 2px solid var(--green) !important;
+        border-radius: 0 !important;
         background: transparent !important;
         color: var(--green) !important;
         font-size: 1.6rem;
-        padding: 1.5rem 2rem !important;
+        padding: 1.5rem 0rem !important;
         font-family: "sofia-pro", sans-serif !important;
         width: 100% !important;
         resize: none;
@@ -113,6 +116,7 @@ Image and text blocka
       display: flex;
       flex-wrap: wrap;
       align-content: center;
+      order: 1;
 
       @include media($lg, max) {
         width: 100%;
@@ -149,6 +153,7 @@ Image and text blocka
       @include media($lg, max) {
         width: 100%;
         aspect-ratio: 2/1;
+
         img {
           object-position: center;
         }
@@ -156,37 +161,37 @@ Image and text blocka
 
       img {
         position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
+        top: 4rem;
+        left: 4rem;
+        width: calc(100% - 8rem);
+        height: calc(100% - 8rem);
         object-fit: cover;
       }
     }
   }
 }
 
-[data-theme="postpartum"] {
+.contact-element {
   .contact-element__wrap__text {
-    background: var(--purple-light) !important;
+    background: #fffcf8 !important;
   }
 
   .contact-element__wrap * {
-    color: var(--orange) !important;
+    color: var(--pink) !important;
   }
 
   .contact-element__wrap__form input[type="text"],
   .contact-element__wrap__form input[type="email"],
-  .contact-element__wrap__form textarea{
-    color: var(--orange) !important;
-    border-color: var(--orange) !important;
+  .contact-element__wrap__form textarea {
+    color: var(--pink) !important;
+    border-color: var(--pink) !important;
 
     @include placeholder {
-      color: var(--orange ) !important;
+      color: var(--pink) !important;
     }
   }
 
-  [type="submit"]{
-    background: var(--orange) !important;
+  [type="submit"] {
+    background: var(--pink) !important;
   }
 }
