--- a/source/sections/grid-with-text.scss
+++ b/source/sections/grid-with-text.scss
@@ -197,3 +197,31 @@
         }
     }
 }
+
+
+.image-element{
+    &-wave3,
+    &-wave4 {
+        @include svg(1366, 768);
+        position: absolute;
+        left: 60%;
+        bottom: -50%;
+        width: 100%;
+        transform: translateY(0%) translateX(-10%) rotate(-60deg);
+        pointer-events: none;
+        z-index: -1;
+        z-index: 1;
+
+        @media screen and (max-width: 1280px) {
+            display: none;
+        }
+
+        path {
+            stroke: var(--pink);
+        }
+    }
+
+    &-wave3 {
+        transform: translateY(-50%) translateX(-10%) rotate(-220deg);
+    }
+}
