--- a/source/sections/grid.scss
+++ b/source/sections/grid.scss
@@ -11,7 +11,7 @@
         position: absolute;
         left: 0;
         top: 0;
-        width: 100%; 
+        width: 100%;
         transform: translateY(0%) translateX(-50%) rotate(-40deg);
         pointer-events: none;
         z-index: -1;
@@ -95,8 +95,8 @@
         }
 
         @include media($xmd, max) {
-            width: 100%;
-            @include aspect(1380, 880);
+            // width: 100%;
+            // @include aspect(1380, 880);
         }
 
         &__image {
