--- a/source/sections/product.scss
+++ b/source/sections/product.scss
@@ -54,6 +54,7 @@
         width: 50%;
         padding-right: 4rem;
         position: relative;
+        margin-bottom: 8rem;
 
         @include media($md, max) {
             width: 100%;
@@ -727,5 +728,28 @@ html {
             transform: translateX(-50%) translateY(-50%) rotate(45deg);
             background: white;
         }
+    }
+}
+
+.product-nav {
+    position: absolute;
+    height: 8rem;
+    top: 100%;
+    margin-top: 2rem;
+    left: 0;
+    right: 0;
+
+    .product-nav-slider-item {
+        position: relative;
+        width: 8rem;
+        padding: 0.5rem;
+    }
+
+    img{
+        transition: all 0.2s ease-in-out;
+    }
+
+    .is-selected img{
+        outline: 2px solid #ec5b44;
     }
 }
